@@ -1,3 +1,8 @@
+2006-03-25  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil.Cil/CodeWriter.cs:
+		Cache local sig as well.
+
 2006-03-24  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/ReflectionWriter.cs:
